src/main/resources/static/css/goodsDetail.css
footer {
	position: absolute;
}

li{
    list-style-type: none;
}
.main-container {
    width: 1000px;
    display: flex;
    flex-direction: column;
}
/*div{
	border:1px solid;
}*/

div.top-row{
    display:flex;
    justify-content: space-between;
	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);

}
b{
	 font-weight: 600;
}

.top-row>hr{
	width: 580px;
}
div.top-left{
    width:400px;

}
div.top-right{
    width:600px;
    text-align : left;
    margin-left: 20px;
    font-size:22px;
}
#goods-info{
	width: 550px;
	padding: 10px;
}
#goods-name{
	font-size: 36px;
	font-weight: 600;
	margin-bottom: 10px;
}
#period {
	font-size: 18px;
	margin-bottom: 20px;
	width: 570px;
}
#goods-cart>li{
    margin-left: -40px;
}
/* ---- 추가 ---- */
#goods-list {
    width: 600px;
    font-size: 20px;
    /* display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center; */
}

#goods-select {
    width: 560px;
	height: 40px;
    font-size: 20px;
    border: 1px solid;
    border-radius: 5px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
}

#select-text {
    /*
    padding-left: 5px;*/
    padding: 8px;
  	font-size: 16px;

}

.bi {
    padding-right: 5px;
}

#item-container {
    width: 550px;
    max-height: 200px;
    overflow-y: scroll;
    display: none;
    margin-top: 5px;
}

.item {
    margin-bottom: 10px;
    padding: 5px;
    border: 1px solid;
    border-radius: 5px;
    cursor: pointer;
}
.item-box:hover{
	background-color: #ececec;
}
#kakao-pay{
	height: 50px;
	margin-bottom: 10px;
}

.item-id {
	display: none;
}
.item-price {
    font-size: 18px;
}
.item-config {
    font-size: 16px;
}

.item-box{
    width: 570px;
	display: flex;
	flex-direction: row;
	align-items: center;
    margin: 5px 0;
}

.items-id {

	display: none;
}

.items-name{
	width: 430px;
    font-size: 22px;
    margin-right:5px;
    margin-bottom:5px;
}
.items-price {
    width: 100px;
    font-size: 20px;
    text-align: right;
}

.item-delete{
    width: 60px;
	height:32px;
    margin-left: 5px;
	margin-bottom: 3px;
}

#container-bar {
    width: 1000px;
}

#selected-item {
    margin-top: 15px;
    font-size: 20px;
    font-weght: 1000;
}
#thumbnail-box{
	width:400px;
	height:400px;
	display:flex;
	justify-content:center;
	align-items: center;
	overflow:hidden;
}
#thumbnail{
	max-width:100%;
    max-height: 100%;
}
#detail{
    width: 380px;
    font-size:20px;
    margin-top:10px;
    border-radius:4px;
    height: 100px;
    text-align: left;
    padding: 5px;
}
#row>#left>#detail{
    margin-top:20px;
    margin-bottom:20px;
}
/*#goods-explanation{
    border:1px solid;
}*/
.cal-name{
    width: 550px;
    height:30px;
    display: block;
    flex-direction: column;
    margin-bottom: 5px;
    /*border: 1px solid;*/
}
#total-goods{
	width:270px;
	float:left;
}
#total-price{
	width:270px;
	float:right;
	text-align:right;
}
#delivery{
	width:270px;
	float:left;
}
#delivery-price{
	width:270px;
	float:right;
	text-align:right;
}
#total-pay-amount{
	width:270px;
	float:left;
}
#total-pay-amount-price{
	width:270px;
	float:right;
	text-align:right;
}
#API-icon{
	width: 120px;
	float:right;
	margin-top: 10px;
    cursor: pointer;
}
.option-container{
    display: flex;
    flex-direction: column;
}

.option-item-name-price {
    display: flex;
    flex-direction: column;
}
#expname{
    text-align: left;
}
#seller-container{
	height:40px;
	margin-bottom: 5px;
	display: flex;
	justify-content: left;
	align-items: center;
}
#profile{
	float:left;
    width:30px;
    height:30px;
    margin-right:5px;
}
#seller-name{
    font-size: 20px; 
    margin: auto 0;
    width: 100px;
	height: 40px;
    display: flex;
    align-items: center;
  	text-align: center; 
}
#goods-explanation{
    width: 1000px;
    text-align: center;
}

